--- a/.env
+++ b/.env
@@ -1,20 +1,25 @@
- #internal_service
-HOST_DEVICE=device-host
-PORT_DEVICE=8081
+#internal_service
+SERVICE:
+ HOST_SERVICE=localhost
+ PORT_SERVICE=8081
 
 #device_service
-HOST_SERVICE=service-host
-PORT_SERVICE=8082
-
-#jwt_token_setting
-JWT_SECRET=mysecret
-JWT_ISSUER=myissuer
-JWT_EXPIRES=24h
+DEVICE:
+ HOST_DEVICE=localhost
+ PORT_DEVICE=8082
 
 #db
-DB_USER=dbuser
-DB_PASSWORD=dbpassword
-DB_NAME=mydbname
-DB_SSL_MODE=disable
-DB_HOST=dbhost
-DB_PORT=5432
+DB:
+ DIALECT=postgres
+ DB_USER=dbuser
+ DB_PASSWORD=dbpassword
+ DB_NAME=mydbname
+ DB_SSL_MODE=disable
+ DB_HOST=dbhost
+ DB_PORT=5432
+
+#jwt_token_setting
+JWT_TOKEN:
+ JWT_SECRET=mysecret
+ JWT_ISSUER=myissuer
+ JWT_EXPIRES=24h
